[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/circuits.png" type="Texture" id=1]
[ext_resource path="res://assets/circuits-l.png" type="Texture" id=4]
[ext_resource path="res://assets/home.png" type="Texture" id=5]
[ext_resource path="res://buttons/Buttons.gd" type="Script" id=6]
[ext_resource path="res://assets/gates.png" type="Texture" id=7]
[ext_resource path="res://assets/numbers.png" type="Texture" id=8]
[ext_resource path="res://assets/home-l.png" type="Texture" id=9]
[ext_resource path="res://assets/numbers-l.png" type="Texture" id=10]
[ext_resource path="res://assets/gates-l.png" type="Texture" id=11]
[ext_resource path="res://assets/numbers-f.png" type="Texture" id=12]
[ext_resource path="res://assets/circuits-f.png" type="Texture" id=14]
[ext_resource path="res://assets/gates-f.png" type="Texture" id=16]

[node name="Buttons" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -1530.0
margin_bottom = -1006.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 10
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Home" type="TextureButton" parent="."]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
hint_tooltip = "Main menu"
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 9 )

[node name="Numbers" type="TextureButton" parent="."]
margin_left = 74.0
margin_right = 138.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
hint_tooltip = "Numbers"
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 10 )
texture_disabled = ExtResource( 12 )

[node name="Gates" type="TextureButton" parent="."]
margin_left = 148.0
margin_right = 212.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
hint_tooltip = "Gates"
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 11 )
texture_disabled = ExtResource( 16 )

[node name="Circuits" type="TextureButton" parent="."]
margin_left = 222.0
margin_right = 286.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
hint_tooltip = "Circuits"
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 14 )
[connection signal="button_down" from="Home" to="." method="_on_Home_button_down"]
[connection signal="button_down" from="Numbers" to="." method="_on_Numbers_button_down"]
[connection signal="button_down" from="Gates" to="." method="_on_Gates_button_down"]
[connection signal="button_down" from="Circuits" to="." method="_on_Circuits_button_down"]
